ch5-button-list/scss/_button-list-stretch.scss
///////////////////////////////////////////////////////////////////////////////////////////////////
/// Copyright (C) 2022 to the present, Crestron Electronics, Inc.
/// All rights reserved.
/// No part of this software may be reproduced in any form, machine
/// or natural, without the express written consent of Crestron Electronics.
/// Use of this source code is subject to the terms of the Crestron Software License Agreement
/// under which you licensed this source code.
///
/// @author Crestron
/// @group ch5-button-list
////////////////////////////////////////////////////////////////////////////////////////////////////
ch5-button-list {
  .ch5-button-list {
    &.ch5-button-list--stretch-width {
      width: 100%;
    }

    &.ch5-button-list--stretch-height {
      .ch5-button-list--button-container {
        height: 100%;
      }
    }

    &.ch5-button-list--stretch-both {
      width: 100%;

      .ch5-button-list--button-container {
        height: 100%;
      }
    }

    &.ch5-button-list--scrollbar-false {

      &.ch5-button-list--stretch-width,
      &.ch5-button-list--stretch-both {
        .ch5-button-list--button-container {
          width: 100%;
        }
      }
    }
  }
}

